# documentfix

./: README.md  pyproject.toml
src/documentfix/: __init__.py
src/documentfix/gui/: draw.py  imageutils.py  mainwindow.py
